--- a/show.ipynb
+++ b/show.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,25 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+----------------------+-----------------------------+-----------------------+-----------------------+\n",
-      "|   Token   |      Std Median      | Std Volume Weighted Average |      Std Coinbase     |     Std Chainlink     |\n",
-      "+-----------+----------------------+-----------------------------+-----------------------+-----------------------+\n",
-      "|  BTC-USD  |  393.54581423561194  |      391.36939414945067     |   394.3426192178208   |    394.987777320205   |\n",
-      "|  ETH-USD  |  51.01278707500176   |      50.88038373086427      |   51.28674630005115   |   50.26310076911679   |\n",
-      "|  DOGE-USD | 0.001184261769583353 |    0.0011685726960235406    | 0.0012039850351069214 | 0.0011541976186462246 |\n",
-      "|  LINK-USD |  0.414135647144762   |     0.41331815472439004     |  0.41709643724788725  |   0.414168148753951   |\n",
-      "|  SOL-USD  |  1.1983147283515347  |      1.195033586391568      |   1.1999189353151112  |   1.2002071803129337  |\n",
-      "| MATIC-USD | 0.013841721067817597 |     0.013693013799458005    |  0.014124728129315887 |  0.013920824135405607 |\n",
-      "|  DOT-USD  |  0.3575504983817964  |     0.35737994645187343     |   0.3578668166551932  |   0.3580261250985632  |\n",
-      "|  ATOM-USD |  0.4911258403186597  |     0.49102356547282333     |  0.49449746775625386  |  0.49083741183467916  |\n",
-      "+-----------+----------------------+-----------------------------+-----------------------+-----------------------+\n"
+     "ename": "KeyError",
+     "evalue": "'coinbase'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/oraichain/Documents/Price/show.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=0'>1</a>\u001b[0m t \u001b[39m=\u001b[39m PrettyTable([\u001b[39m'\u001b[39m\u001b[39mToken\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mStd Median\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mStd Volume Weighted Average\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=1'>2</a>\u001b[0m                 \u001b[39m'\u001b[39m\u001b[39mStd Coinbase\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mStd Chainlink\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m token \u001b[39min\u001b[39;00m TOKENS:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=3'>4</a>\u001b[0m     t\u001b[39m.\u001b[39madd_row(main1(token))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(t)\n",
+      "\u001b[1;32m/Users/oraichain/Documents/Price/show.ipynb Cell 7\u001b[0m in \u001b[0;36mmain1\u001b[0;34m(token)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=9'>10</a>\u001b[0m median\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mprice_median\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=10'>11</a>\u001b[0m vwa\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mprice_volume_weighted_average\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=11'>12</a>\u001b[0m coinbase\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39;49m\u001b[39mdata\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m'\u001b[39;49m\u001b[39mcoinbase\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=12'>13</a>\u001b[0m chainlink\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mchainlink\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=13'>14</a>\u001b[0m timestamp\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mtimestamp\u001b[39m\u001b[39m'\u001b[39m])\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'coinbase'"
      ]
     }
    ],
