--- a/show.ipynb
+++ b/show.ipynb
@@ -14,7 +14,7 @@
     "import statistics as sta\n",
     "import random\n",
     "import threading\n",
-    "from prettytable import PrettyTable\n"
+    "from prettytable import PrettyTable"
    ]
   },
   {
