--- a/testcase_api.ipynb
+++ b/testcase_api.ipynb
@@ -12,19 +12,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': {'price_volume_weighted_average': 1659.0989445071123,\n",
-       "  'timestamp': 1659673236.885421,\n",
-       "  'token': 'ETH-USD'},\n",
+       "{'data': {'data': [{'delay': 0.5144410133361816,\n",
+       "    'price': 4.08,\n",
+       "    'source': 'BINACE',\n",
+       "    'timestamp': 1661236719.11769,\n",
+       "    'token': 'NEAR',\n",
+       "    'volume24h': 65463553.4104},\n",
+       "   {'delay': 2.7936689853668213,\n",
+       "    'price': 4.0797,\n",
+       "    'source': 'KUCOIN',\n",
+       "    'timestamp': 1661236716.329,\n",
+       "    'token': 'NEAR',\n",
+       "    'volume24h': 4864582.425841889},\n",
+       "   {'delay': 1.0312530994415283,\n",
+       "    'price': 4.0789,\n",
+       "    'source': 'GATEIO',\n",
+       "    'timestamp': 1661236719.128469,\n",
+       "    'token': 'NEAR',\n",
+       "    'volume24h': 3620477.0721191},\n",
+       "   {'delay': 8.12166976928711,\n",
+       "    'price': 4.08,\n",
+       "    'source': 'CHAINLINK',\n",
+       "    'timestamp': 1661236711,\n",
+       "    'token': 'NEAR',\n",
+       "    'volume24h': 135925057.35159203}],\n",
+       "  'price_median': 4.079650000000001,\n",
+       "  'price_volume_weighted_average': 4.079974070594466,\n",
+       "  'timestamp': 1661236719.117337,\n",
+       "  'token': 'NEAR-USD'},\n",
        " 'error': None}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,8 +57,8 @@
    "source": [
     "# check response time, response result\n",
     "headers = {\"Authorization\": \"ai_market\",}\n",
-    "json_data = {\"data\": \"eth\"}\n",
-    "requests.post('http://127.0.0.1:5000/price/vwa',headers=headers,json=json_data).json()"
+    "json_data = {\"data\": \"near\"}\n",
+    "requests.post('http://127.0.0.1:5000/price',headers=headers,json=json_data).json()"
    ]
   },
   {
