--- a/testcase_api.ipynb
+++ b/testcase_api.ipynb
@@ -12,44 +12,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': {'data': [{'delay': 0.5144410133361816,\n",
-       "    'price': 4.08,\n",
-       "    'source': 'BINACE',\n",
-       "    'timestamp': 1661236719.11769,\n",
-       "    'token': 'NEAR',\n",
-       "    'volume24h': 65463553.4104},\n",
-       "   {'delay': 2.7936689853668213,\n",
-       "    'price': 4.0797,\n",
+       "{'data': {'data': [{'delay': 1.1206259727478027,\n",
+       "    'price': 1.89,\n",
        "    'source': 'KUCOIN',\n",
-       "    'timestamp': 1661236716.329,\n",
-       "    'token': 'NEAR',\n",
-       "    'volume24h': 4864582.425841889},\n",
-       "   {'delay': 1.0312530994415283,\n",
-       "    'price': 4.0789,\n",
+       "    'timestamp': 1661237552.164,\n",
+       "    'token': 'ORAI',\n",
+       "    'volume24h': 33832.6615634},\n",
+       "   {'delay': 0.800105094909668,\n",
+       "    'price': 1.8988,\n",
        "    'source': 'GATEIO',\n",
-       "    'timestamp': 1661236719.128469,\n",
-       "    'token': 'NEAR',\n",
-       "    'volume24h': 3620477.0721191},\n",
-       "   {'delay': 8.12166976928711,\n",
-       "    'price': 4.08,\n",
+       "    'timestamp': 1661237553.28701,\n",
+       "    'token': 'ORAI',\n",
+       "    'volume24h': 15010.878045562},\n",
+       "   {'delay': 78.28442120552063,\n",
+       "    'price': 1.8988,\n",
        "    'source': 'CHAINLINK',\n",
-       "    'timestamp': 1661236711,\n",
-       "    'token': 'NEAR',\n",
-       "    'volume24h': 135925057.35159203}],\n",
-       "  'price_median': 4.079650000000001,\n",
-       "  'price_volume_weighted_average': 4.079974070594466,\n",
-       "  'timestamp': 1661236719.117337,\n",
-       "  'token': 'NEAR-USD'},\n",
+       "    'timestamp': 1661237475,\n",
+       "    'token': 'ORAI',\n",
+       "    'volume24h': 14172.0230961818}],\n",
+       "  'price_median': 1.8958666666666666,\n",
+       "  'price_volume_weighted_average': 1.8940753350287292,\n",
+       "  'timestamp': 1661237553.283097,\n",
+       "  'token': 'ORAI-USD'},\n",
        " 'error': None}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +51,7 @@
    "source": [
     "# check response time, response result\n",
     "headers = {\"Authorization\": \"ai_market\",}\n",
-    "json_data = {\"data\": \"near\"}\n",
+    "json_data = {\"data\": \"orai\"}\n",
     "requests.post('http://127.0.0.1:5000/price',headers=headers,json=json_data).json()"
    ]
   },
