--- a/show.ipynb
+++ b/show.ipynb
@@ -179,7 +179,7 @@
     "\n",
     "    \n",
     "    \n",
-    "    t.add_row([token,cov_meidan_coinbase/var_coinbase,cov_median_chainlink/var_chainlink,cov_vwa_coinbase/var_coinbase,cov_vwa_chainlink/var_chainlink])"
+    "    return [token,cov_meidan_coinbase/var_coinbase,cov_median_chainlink/var_chainlink,cov_vwa_coinbase/var_coinbase,cov_vwa_chainlink/var_chainlink]"
    ]
   },
   {
