--- a/show.ipynb
+++ b/show.ipynb
@@ -39,6 +39,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datas = mycol.find({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data in datas:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -194,8 +213,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/oraichain/Documents/Price/show.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=0'>1</a>\u001b[0m t \u001b[39m=\u001b[39m PrettyTable([\u001b[39m'\u001b[39m\u001b[39mToken\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mStd Median\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mStd Volume Weighted Average\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=1'>2</a>\u001b[0m                 \u001b[39m'\u001b[39m\u001b[39mStd Coinbase\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mStd Chainlink\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m token \u001b[39min\u001b[39;00m TOKENS:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=3'>4</a>\u001b[0m     t\u001b[39m.\u001b[39madd_row(main1(token))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(t)\n",
-      "\u001b[1;32m/Users/oraichain/Documents/Price/show.ipynb Cell 7\u001b[0m in \u001b[0;36mmain1\u001b[0;34m(token)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=9'>10</a>\u001b[0m median\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mprice_median\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=10'>11</a>\u001b[0m vwa\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mprice_volume_weighted_average\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=11'>12</a>\u001b[0m coinbase\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39;49m\u001b[39mdata\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m'\u001b[39;49m\u001b[39mcoinbase\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=12'>13</a>\u001b[0m chainlink\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mchainlink\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price/show.ipynb#ch0000006?line=13'>14</a>\u001b[0m timestamp\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mtimestamp\u001b[39m\u001b[39m'\u001b[39m])\n",
+      "\u001b[1;32m/Users/oraichain/Documents/Price Feed/show.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price%20Feed/show.ipynb#ch0000006?line=0'>1</a>\u001b[0m t \u001b[39m=\u001b[39m PrettyTable([\u001b[39m'\u001b[39m\u001b[39mToken\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mStd Median\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mStd Volume Weighted Average\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price%20Feed/show.ipynb#ch0000006?line=1'>2</a>\u001b[0m                 \u001b[39m'\u001b[39m\u001b[39mStd Coinbase\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mStd Chainlink\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price%20Feed/show.ipynb#ch0000006?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m token \u001b[39min\u001b[39;00m TOKENS:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price%20Feed/show.ipynb#ch0000006?line=3'>4</a>\u001b[0m     t\u001b[39m.\u001b[39madd_row(main1(token))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price%20Feed/show.ipynb#ch0000006?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(t)\n",
+      "\u001b[1;32m/Users/oraichain/Documents/Price Feed/show.ipynb Cell 7\u001b[0m in \u001b[0;36mmain1\u001b[0;34m(token)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price%20Feed/show.ipynb#ch0000006?line=9'>10</a>\u001b[0m median\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mprice_median\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price%20Feed/show.ipynb#ch0000006?line=10'>11</a>\u001b[0m vwa\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mprice_volume_weighted_average\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price%20Feed/show.ipynb#ch0000006?line=11'>12</a>\u001b[0m coinbase\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39;49m\u001b[39mdata\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m'\u001b[39;49m\u001b[39mcoinbase\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price%20Feed/show.ipynb#ch0000006?line=12'>13</a>\u001b[0m chainlink\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mchainlink\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oraichain/Documents/Price%20Feed/show.ipynb#ch0000006?line=13'>14</a>\u001b[0m timestamp\u001b[39m.\u001b[39mappend(data[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mtimestamp\u001b[39m\u001b[39m'\u001b[39m])\n",
       "\u001b[0;31mKeyError\u001b[0m: 'coinbase'"
      ]
     }
