--- a/show.ipynb
+++ b/show.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
    ],
    "source": [
     "for data in datas:\n",
-    "    print(data)"
+    "    print(data[0])"
    ]
   },
   {
