--- a/show.ipynb
+++ b/show.ipynb
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datas = mycol.find({'source':'BINACE'})"
+    "datas = mycol.find({'data':'BINACE'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
