--- a/show.ipynb
+++ b/show.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datas = mycol.find({'data':'BINACE'})"
+    "datas = mycol.find({})"
    ]
   },
   {
