--- a/full_price.ipynb
+++ b/full_price.ipynb
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,18 +624,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'token': 'BTC', 'timestamp': 1658822647.980937, 'price': 21068.23121968596, 'volume24h': '11837144.351226', 'delay': 0.32615089416503906}\n",
-      "{'token': 'ETH', 'timestamp': 1658822648.307295, 'price': 1409.6537618965938, 'volume24h': '39484561256.871286', 'delay': 0.3258500099182129}\n",
-      "{'token': 'DOGE', 'timestamp': 1658822648.633301, 'price': 0.06203576390428494, 'volume24h': '181265036.987012', 'delay': 0.30879902839660645}\n",
-      "{'token': 'LINK', 'timestamp': 1658822648.9424472, 'price': 6.98661432628486, 'volume24h': '177200.854112', 'delay': 0.33481478691101074}\n",
-      "{'token': 'UNI', 'timestamp': 1658822649.277453, 'price': 6.84940230594141, 'volume24h': '19739658.314717', 'delay': 0.3694889545440674}\n"
+      "{'token': 'BTC', 'timestamp': 1661240991.7239099, 'price': 21160.067864629826, 'volume24h': '11845183.582284', 'delay': 3.5829901695251465}\n",
+      "{'token': 'ETH', 'timestamp': 1661240995.307138, 'price': 1593.1971568762629, 'volume24h': '39607981855.487253', 'delay': 0.5525059700012207}\n",
+      "{'token': 'DOGE', 'timestamp': 1661240995.859838, 'price': 0.06760126605635636, 'volume24h': '183085993.222988', 'delay': 0.509552001953125}\n",
+      "{'token': 'LINK', 'timestamp': 1661240996.369598, 'price': 6.893257546044118, 'volume24h': '177452.201788', 'delay': 0.46181297302246094}\n",
+      "{'token': 'UNI', 'timestamp': 1661240996.8316312, 'price': 6.956351176000678, 'volume24h': '19748998.476423', 'delay': 0.3475918769836426}\n"
      ]
     }
    ],
